// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AgentResourceAccessLink renders correct path for privacy contacts 1`] = `
<DocumentFragment>
  <a
    data-testid="resource-access-link"
    href="/privacy/person/https%3A%2F%2Fexample.com%2Fbob"
  >
    Bob
  </a>
</DocumentFragment>
`;

exports[`AgentResourceAccessLink renders iri if name is not found 1`] = `
<DocumentFragment>
  <a
    data-testid="resource-access-link"
    href="/privacy/app/https%3A%2F%2Fmockiri.com"
  >
    https://mockiri.com
  </a>
</DocumentFragment>
`;

exports[`AgentResourceAccessLink supports rendering name from foaf.name 1`] = `
<DocumentFragment>
  <a
    data-testid="resource-access-link"
    href="/privacy/person/https%3A%2F%2Fexample.com%2Fbob"
  >
    Bob
  </a>
</DocumentFragment>
`;

exports[`AgentResourceAccessLink supports rendering name from vcard.fn 1`] = `
<DocumentFragment>
  <a
    data-testid="resource-access-link"
    href="/privacy/app/https%3A%2F%2Fexample.com%2Falice"
  >
    Alice
  </a>
</DocumentFragment>
`;
